# Game-Engine

./: CMakeLists.txt  README.md
src/: game_loop.cpp  main.cpp  window.cpp
src/include/: game_loop.h  window.h
